--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "elo-rating",
   "version": "1.0.0",
-  "description": "",
+  "description": "elo-rating.js is a simple utility to calculate elo ratings for Node.js",
   "main": "index.js",
   "scripts": {
+    "build": "babel src -d dist",
     "test": "mocha test --recursive"
   },
   "author": "Thomas Prochazka <thomas.prochazka@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "mocha": "^2.5.3"
   }
