--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "author": "Thomas Prochazka <thomas.prochazka@gmail.com>",
   "license": "MIT",
+  "keywords": [
+    "elo",
+    "rating"
+  ],
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
